# rustdesk

./: Cargo.toml
projects/client_minimal_tauri/: Cargo.toml  package.json
projects/client_minimal_tauri/frontend/: index.html  main.js
projects/client_minimal_tauri/src/: main.rs
projects/client_minimal_tauri/src-tauri/: Cargo.toml  tauri.conf.json
projects/client_minimal_tauri/src-tauri/src/: lib.rs  main.rs
projects/server_minimal/: Cargo.toml
projects/server_minimal/src/: app_stream.rs  desktop_stream.rs  isolation.rs  main.rs  server.rs  session.rs
