[package]
name = "rustdesk-server-minimal"
version = "0.1.0"
edition = "2021"

# Workspace isolation to prevent parent workspace conflicts
[workspace]

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.10", features = ["v4"] }

# Screen capture dependencies
scrap = { path = "../../libs/scrap" }

# System process management
nix = "0.29"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"
